--- a/web/view/user/userCourseRecord.html
+++ b/web/view/user/userCourseRecord.html
@@ -37,20 +37,15 @@ $(document).ready(function() {
                         </div>
                         \{/if\}
 
-                         <ul class="nav nav-tabs">
-                          <li><a href="../controller/userController.php?action=userDetailPrepare&userId=\{$userData.userId\}">會員詳細資料</a></li>
-                          <li><a href="../controller/userController.php?action=userShoppingRecordPrepare&userId=\{$userData.userId\}">會員購物資料</a></li>
+                         <ul class="nav nav-tabs" style="border-bottom-color: #337ab7; border-bottom-width: 3px; font-size:20px; font-weight: bold;">
+                          <li><a href="../controller/userController.php?action=userDetailPrepare&userId=\{$userId\}">會員詳細資料</a></li>
+                          <li><a href="../controller/userController.php?action=userShoppingRecordPrepare&userId=\{$userId\}">會員購物資料</a></li>
                           <li class="active"><a href="#">會員課程資料</a></li>
                         </ul>
 
 
 
                         <div class="box box-primary">
-                            <div class="box-header with-border">
-                                <h3 class="box-title" style="text-align: left;">購物紀錄</h3>
-
-                                <h4 class="box-tools">會員點數 \{$point\}</h4>
-                            </div>
                             <div class="box-body">
                                 <table class="table table-striped" id="tranListTable">
                                     <thead>
