--- a/web/view/user/userDetail.html
+++ b/web/view/user/userDetail.html
@@ -128,7 +128,7 @@
                                     <!--gender-->
                                     <div id="pointDiv" class="form-group">
                                         <label for="point" class="col-sm-2 control-label">點數</label>
-                                        <div class="col-sm-10">\{$userDetailData.point\}</div>
+                                        <div class="col-sm-10" style="color:#e2533b; font-weight:bold; font-size: 22px;">\{$userDetailData.point\}</div>
                                     </div>
 
                                     <!--address-->
