--- a/web/view/user/userSearch.html
+++ b/web/view/user/userSearch.html
@@ -116,7 +116,7 @@ function deleteUser(userId){
                                             \{/if\}
                                             <td>\{$user.phone\}</td>
                                             <td>\{$user.downlineNum\}</td>
-                                            <td>\{$user.point\}</td>
+                                            <td style="color:#e2533b; font-weight:bold; font-size: 20px;">\{$user.point\}</td>
                                             <td>
                                                 <a href="../controller/userController.php?action=userDetailPrepare&userId=\{$user.userId\}">
                                                     <button class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-pencil"></i></button>
