--- a/web/view/user/userShoppingRecordEdit.html
+++ b/web/view/user/userShoppingRecordEdit.html
@@ -190,10 +190,11 @@ $(document).ready(function() {
                                 <div class="box-footer" style="text-align: right;">
                                     <a id= "shoppingRecordBtn_0" class="shoppingRecordBtn btn btn-sm btn-primary"><i class="glyphicon glyphicon-plus"></i></a>
                                 </div>
-                            </div>
+                            </div
 
-                            <!--description box-->
-                            <div id="descriptionBox" class="box box-primary">
+
+                            <!--description & price box-->
+                            <div id="priceBox" class="box box-primary">
                                 <div class="box-body">
                                     <div id="descriptionDiv" class="form-group">
                                         <label for="description" class="col-sm-2 control-label">備註</label>
@@ -201,13 +202,6 @@ $(document).ready(function() {
                                             <textarea name="description" class="form-control" rows="5" ></textarea>
                                         </div>
                                     </div>
-                                </div>
-                            </div>
-
-
-                            <!--price box-->
-                            <div id="priceBox" class="box box-primary">
-                                <div class="box-body">
                                     <div id="pirceDiv" class="form-group">
                                         <label for="price" class="col-sm-2 control-label">價格</label>
                                         <div class="col-sm-6">
