--- a/web/view/user/userShoppingAdd.html
+++ b/web/view/user/userShoppingAdd.html
@@ -190,8 +190,7 @@ $(document).ready(function() {
                             <div id="box1" class="box box-primary hidden">
                             </div>
 
-                            <!--descriptionBox-->
-                            <div id="descriptionBox" class="box box-primary">
+                            <div class="box box-primary">
                                 <div class="box-body">
                                     <div id="descriptionDiv" class="form-group">
                                         <label for="description" class="col-sm-2 control-label">備註</label>
@@ -199,11 +198,6 @@ $(document).ready(function() {
                                             <textarea name="description" class="form-control" rows="5" ></textarea>
                                         </div>
                                     </div>
-                                </div>
-                            </div>
-
-                            <div id="priceBox" class="box box-primary">
-                                <div class="box-body">
                                     <div id="pirceDiv" class="form-group">
                                         <label for="price" class="col-sm-2 control-label">價格</label>
                                         <div class="col-sm-6">
@@ -211,15 +205,16 @@ $(document).ready(function() {
                                         </div>
                                     </div>
                                 </div>
+                                <div class="box-footer" style="text-align: right;">
+                                    <a href="../controller/userController.php?action=userShoppingRecordPrepare&userId=\{$userId\}" class="btn btn-warning">取消</a>
+                                    <input type="hidden" name="action" value="userShoppingAdd">
+                                    <input type="hidden" name="userId" value="\{$userId\}">
+                                    <input type="hidden" name="tranDetailLength" value="1">
+                                    <button type="submit" class="btn btn-success">更新</button>
+                                </div>
                             </div>
 
-                            <div class="box-footer" style="text-align: right;">
-                                <a href="../controller/userController.php?action=userShoppingRecordPrepare&userId=\{$userId\}" class="btn btn-warning">取消</a>
-                                <input type="hidden" name="action" value="userShoppingAdd">
-                                <input type="hidden" name="userId" value="\{$userId\}">
-                                <input type="hidden" name="tranDetailLength" value="1">
-                                <button type="submit" class="btn btn-success">更新</button>
-                            </div>
+                            
 
 
                         </form>
