Modify product layout

--- a/web/view/brand/brandAdd.html
+++ b/web/view/brand/brandAdd.html
@@ -82,7 +82,7 @@
                                     <div id="brandNameDiv" class="form-group">
                                         <label for="brandName" class="col-sm-2 control-label">品牌名稱</label>
                                         <div class="col-sm-10">
-                                            <input id="brandName" name="brandName" class="form-control" placeholder="輸入品牌名稱">
+                                            <input id="brandName" name="brandName" class="form-control" placeholder="輸入品牌名稱" required>
                                         </div>
                                     </div>
                                     <div id="descriptionDiv" class="form-group">
