--- a/web/view/len/lenAdd.html
+++ b/web/view/len/lenAdd.html
@@ -53,7 +53,7 @@
                                     <div id="lenNameDiv" class="form-group">
                                         <label for="lenName" class="col-sm-2 control-label">隱形眼鏡名稱</label>
                                         <div class="col-sm-6">
-                                            <input id="lenName" name="lenName" class="form-control" placeholder="隱形眼鏡名稱">
+                                            <input id="lenName" name="lenName" class="form-control" placeholder="隱形眼鏡名稱" required>
                                         </div>
                                     </div>
                                     <div id="lenBrandDiv" class="form-group">
