--- a/web/view/part/partEdit.html
+++ b/web/view/part/partEdit.html
@@ -36,7 +36,7 @@
                                     <div id="partNameDiv" class="form-group">
                                         <label for="partName" class="col-sm-2 control-label">零件名稱</label>
                                         <div class="col-sm-10">
-                                            <input id="partName" name="partName" class="form-control" placeholder="輸入零件名稱" value="\{$partData.partName\}">
+                                            <input id="partName" name="partName" class="form-control" placeholder="輸入零件名稱" value="\{$partData.partName\}" required>
                                         </div>
                                     </div>
                                     <div id="partTypeDiv" class="form-group">
