--- a/web/view/style/styleAdd.html
+++ b/web/view/style/styleAdd.html
@@ -63,7 +63,7 @@
                                     <div id="styleNameDiv" class="form-group">
                                         <label for="styleName" class="col-sm-2 control-label">風格名稱</label>
                                         <div class="col-sm-10">
-                                            <input id="styleName" name="styleName" class="form-control" placeholder="輸入風格名稱">
+                                            <input id="styleName" name="styleName" class="form-control" placeholder="輸入風格名稱" required>
                                         </div>
                                     </div>
                                     <div id="styleImageDiv" class="form-group">
