--- a/web/view/style/styleEdit.html
+++ b/web/view/style/styleEdit.html
@@ -79,7 +79,7 @@
                                     <div id="styleNameDiv" class="form-group">
                                         <label for="styleName" class="col-sm-2 control-label">風格名稱</label>
                                         <div class="col-sm-10">
-                                            <input id="styleName" name="styleName" class="form-control" value="\{$styleData.styleName\}">
+                                            <input id="styleName" name="styleName" class="form-control" value="\{$styleData.styleName\}" required>
                                         </div>
                                     </div>
                                     <div id="styleImageDiv" class="form-group">
