--- a/web/view/brand/brandEdit.html
+++ b/web/view/brand/brandEdit.html
@@ -80,7 +80,7 @@
                                     <div id="brandNameDiv" class="form-group">
                                         <label for="brandName" class="col-sm-2 control-label">品牌名稱</label>
                                         <div class="col-sm-10">
-                                            <input id="brandName" name="brandName" class="form-control" value="\{$brandData.brandName\}">
+                                            <input id="brandName" name="brandName" class="form-control" value="\{$brandData.brandName\}" required>
                                         </div>
                                     </div>
                                     <div id="descriptionDiv" class="form-group">
