--- a/web/view/glass/glassEdit.html
+++ b/web/view/glass/glassEdit.html
@@ -34,13 +34,13 @@
                                     <div id="glassNameDiv" class="form-group">
                                         <label for="glassName" class="col-sm-2 control-label">鏡片名稱</label>
                                         <div class="col-sm-6">
-                                            <input id="glassName" name="glassName" class="form-control" placeholder="輸入鏡片名稱" value="\{$glassData.glassName\}">
+                                            <input id="glassName" name="glassName" class="form-control" placeholder="輸入鏡片名稱" value="\{$glassData.glassName\}" required>
                                         </div>
                                     </div>
                                     <div id="glassNoDiv" class="form-group">
                                         <label for="glassNo" class="col-sm-2 control-label">鏡片型號</label>
                                         <div class="col-sm-6">
-                                            <input id="glassNo" name="glassNo" class="form-control" placeholder="輸入鏡片型號" value="\{$glassData.no\}">
+                                            <input id="glassNo" name="glassNo" class="form-control" placeholder="輸入鏡片型號" value="\{$glassData.no\}" required>
                                         </div>
                                     </div>
                                     <div id="glassBrandDiv" class="form-group">
