--- a/web/view/part/partAdd.html
+++ b/web/view/part/partAdd.html
@@ -32,7 +32,7 @@
                                     <div id="partNameDiv" class="form-group">
                                         <label for="partName" class="col-sm-2 control-label">零件名稱</label>
                                         <div class="col-sm-6">
-                                            <input id="partName" name="partName" class="form-control" placeholder="輸入零件名稱">
+                                            <input id="partName" name="partName" class="form-control" placeholder="輸入零件名稱" required>
                                         </div>
                                     </div>
                                     <div id="partTypeDiv" class="form-group">
