Add frontend web ui settings of index

--- a/web/view/common/menu.html
+++ b/web/view/common/menu.html
@@ -24,7 +24,8 @@
                                     <i class="fa fa-gg-circle"></i>品牌新增</a>
                             </li>
                             <li>
-                                <a href="../controller/brandController.php?action=brandList"><i class="fa fa-gg-circle"></i>品牌檢視/修改</a>
+                                <a href="../controller/brandController.php?action=brandList">
+                                    <i class="fa fa-gg-circle"></i>品牌檢視/修改</a>
                             </li>
                         </ul>
                     </li>
@@ -56,7 +57,7 @@
                             </li>
                             <li>
                                 <a href="../controller/frameController.php?action=frameList">
-                            <i class="fa fa-tripadvisor"></i> 鏡框檢視/修改</a>
+                                    <i class="fa fa-tripadvisor"></i> 鏡框檢視/修改</a>
                             </li>
                             <li>
                                 <a href="../controller/glassController.php?action=glassAddPrepare">
@@ -231,6 +232,20 @@
                     <li>
                         <a href="../controller/statisticController.php?action=articleClick">
                             <i class="fa fa-bar-chart"></i>文章點擊率統計
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="fa fa-th-list"></i>
+                    <span>前台頁面設定</span>
+                    <i class="fa fa-angle-down pull-right"></i>
+                </a>
+                <ul class="treeview-menu">
+                    <li>
+                        <a href="../controller/uiController.php?action=viewIndexCover">
+                            <i class="fa fa-gear"></i>首頁圖片檢視
                         </a>
                     </li>
                 </ul>
