--- a/web/view/ui/indexCoverSet.html
+++ b/web/view/ui/indexCoverSet.html
@@ -23,76 +23,101 @@
                         \{/if\}
                         <div class="box box-primary">
                             <div class="box-header with-border">
-                                <h3 class="box-title">圖片列表&nbsp;
-                                    <button type="button" class="btn btn-info">預覽</button>
-                                </h3>
+                                <h3 class="box-title">圖片列表&nbsp;</h3>
                             </div>
-                            <div class="box-body">
-                                <div class="col-md-12" style="text-align:center;">
-                                    <a href="../controller/uiController.php?action=editIndexCover" class="btn btn-primary">
-                                        <i class="glyphicon glyphicon-pencil"></i>
-                                    </a>
-                                    <a class="btn btn-danger" onclick="deleteframe('\{$frame.frameId\}');">
-                                        <i class="glyphicon glyphicon-remove"></i>
-                                    </a>
-                                    <br/>
-                                    <img id="\{$images[0].imageId\}" class="img-thumbnail" src="\{$images[0].path\}../image/glasses_icon.png" alt="尚未上傳圖片">
+                            <form class="form-horizontal" method="post" enctype="multipart/form-data" action="../controller/uiController.php">
+                                <div class="box-body" style="text-align:center;">
+                                    <div class="col-md-12">
+                                        <h4>圖片 - 0</h4>
+                                        <div class="form-inline" style="display:inline-block;">
+                                            <input type="file" class="uploadImage" name="index_img_0" id="index_0" data-input="false" accept="image/*" style="display: inline;"> \{if $images[0].imageId != ''\}
+                                            <a class="btn btn-danger" onclick="deleteImg('\{$images[0].imageId\}');">
+                                                <i class="glyphicon glyphicon-remove"></i>
+                                            </a>
+                                            \{/if\}
+                                        </div>
+                                        <br/>
+                                        <img id="index_0_img" class="img-thumbnail" src="\{$images[0].path\}../image/glasses_icon.png" alt="尚未上傳圖片">
+                                    </div>
+                                    \{for $i = 0 to 3\}
+                                    <div class="col-md-2">
+                                        <div class="form-inline" style="display:inline-block;">
+                                            <h4>圖片 - \{$i*5 + 1\}</h4>
+                                            <input type="file" class="uploadImage" name="index_img_\{$i*5 + 1\}" id="index_\{$i*5 + 1\}" data-input="false" accept="image/*"
+                                                style="display: inline;"> \{if $image[$i*5 + 1].imageId != ''\}
+                                            <a class="btn btn-danger" onclick="deleteImg('\{$image[$i*5 + 1].imageId\}');">
+                                                <i class="glyphicon glyphicon-remove"></i>
+                                            </a>
+                                            \{/if\}
+                                        </div>
+                                        <br/>
+                                        <img id="index_\{$i*5 + 1\}_img" class="img-thumbnail" src="\{$image[$i*5 + 1].path\}../image/glasses_icon.png" alt="尚未上傳圖片">
+                                    </div>
+                                    <div class="col-md-2">
+                                        <div class="form-inline" style="display:inline-block;">
+                                            <h4>圖片 - \{$i*5+2\}</h4>
+                                            <input type="file" class="uploadImage" name="index_img_\{$i*5+2\}" id="index_\{$i*5+2\}" data-input="false" accept="image/*"
+                                                style="display: inline;"> \{if $image[$i*5+2].imageId != ''\}
+                                            <a class="btn btn-danger" onclick="deleteImg('\{$image[$i*5+2].imageId\}');">
+                                                <i class="glyphicon glyphicon-remove"></i>
+                                            </a>
+                                            \{/if\}
+                                        </div>
+                                        <br/>
+                                        <img id="index_\{$i*5+2\}_img" class="img-thumbnail" src="\{$image[$i*5+2].path\}../image/glasses_icon.png" alt="尚未上傳圖片">
+                                    </div>
+                                    <div class="col-md-2">
+                                        <div class="form-inline" style="display:inline-block;">
+                                            <h4>圖片 - \{$i*5 + 3\}</h4>
+                                            <input type="file" class="uploadImage" name="index_img_\{$i*5+3\}" id="index_\{$i*5+3\}" data-input="false" accept="image/*"
+                                                style="display: inline;"> \{if $image[$i*5+3].imageId != ''\}
+                                            <a class="btn btn-danger" onclick="deleteImg('\{$image[$i*5+3].imageId\}');">
+                                                <i class="glyphicon glyphicon-remove"></i>
+                                            </a>
+                                            \{/if\}
+                                        </div>
+                                        <br/>
+                                        <img id="index_\{$i*5+3\}_img" class="img-thumbnail" src="\{$image[$i*5+3].path\}../image/glasses_icon.png" alt="尚未上傳圖片">
+                                    </div>
+                                    <div class="col-md-2">
+                                        <div class="form-inline" style="display:inline-block;">
+                                            <h4>圖片 - \{$i*5 + 4\}</h4>
+                                            <input type="file" class="uploadImage" name="index_img_\{$i*5+4\}" id="index_\{$i*5+4\}" data-input="false" accept="image/*"
+                                                style="display: inline;"> \{if $image[$i*5+4].imageId != ''\}
+                                            <a class="btn btn-danger" onclick="deleteImg('\{$image[$i*5+4].imageId\}');">
+                                                <i class="glyphicon glyphicon-remove"></i>
+                                            </a>
+                                            \{/if\}
+                                        </div>
+                                        <br/>
+                                        <img id="index_\{$i*5+4\}_img" class="img-thumbnail" src="\{$image[$i*5+4].path\}../image/glasses_icon.png" alt="尚未上傳圖片">
+                                    </div>
+                                    <div class="col-md-2">
+                                        <div class="form-inline" style="display:inline-block;">
+                                            <h4>圖片 - \{$i*5 + 5\}</h4>
+                                            <input type="file" class="uploadImage" name="index_img_\{$i*5+5\}" id="index_\{$i*5+5\}" data-input="false" accept="image/*"
+                                                style="display: inline;"> \{if $image[$i*5+5].imageId != ''\}
+                                            <a class="btn btn-danger" onclick="deleteImg('\{$image[$i*5+5].imageId\}');">
+                                                <i class="glyphicon glyphicon-remove"></i>
+                                            </a>
+                                            \{/if\}
+                                        </div>
+                                        <br/>
+                                        <img id="index_\{$i*5+5\}_img" class="img-thumbnail" src="\{$image[$i*5+5].path\}../image/glasses_icon.png" alt="尚未上傳圖片">
+                                    </div>
+                                    \{/for\}
                                 </div>
-                            </div>
-                            <div class="box-footer" style="text-align: center;">
-                                \{for $i = 1 to 4\}
-                                <div class="col-md-offset-1 col-md-2">
-                                    <a href="../controller/uiController.php?action=editIndexCover&imageId=\{$image[$i*5].imageId\}" class="btn btn-primary">
-                                        <i class="glyphicon glyphicon-pencil"></i>
-                                    </a>
-                                    <a class="btn btn-danger" onclick="deleteframe('\{$image[$i*5].imageId\}');">
-                                        <i class="glyphicon glyphicon-remove"></i>
-                                    </a>
-                                    <br/>
-                                    <img id="\{$image[$i*5].imageId\}" class="img-thumbnail" src="\{$image[$i*5].path\}../image/glasses_icon.png" alt="">
+                                <div class="box-footer" style="text-align: right;">
+                                    <input type="hidden" name="action" value="editIndexCover">
+                                    <input type="hidden" id="updateList" name="updateList" value="[]">
+                                    <button type="button" class="btn btn-primary" onclick="preview();">
+                                        <i class="fa fa-eye"></i>&nbsp;預覽
+                                    </button>
+                                    <button type="submit" class="btn btn-success" onclick="submitForm();">
+                                        <i class="fa fa-check"></i>&nbsp;更新
+                                    </button>
                                 </div>
-                                <div class="col-md-2">
-                                    <a href="../controller/uiController.php?action=editIndexCover&imageId=\{$image[$i*5+1].imageId\}" class="btn btn-primary">
-                                        <i class="glyphicon glyphicon-pencil"></i>
-                                    </a>
-                                    <a class="btn btn-danger" onclick="deleteframe('\{$image[$i*5+1].imageId\}');">
-                                        <i class="glyphicon glyphicon-remove"></i>
-                                    </a>
-                                    <br/>
-                                    <img id="\{$image[$i*5+1].imageId\}" class="img-thumbnail" src="\{$image[$i*5+1].path\}../image/glasses_icon.png" alt="">
-                                </div>
-                                <div class="col-md-2">
-                                    <a href="../controller/uiController.php?action=editIndexCover&imageId=\{$image[$i*5+2].imageId\}" class="btn btn-primary">
-                                        <i class="glyphicon glyphicon-pencil"></i>
-                                    </a>
-                                    <a class="btn btn-danger" onclick="deleteframe('\{$image[$i*5+2].imageId\}');">
-                                        <i class="glyphicon glyphicon-remove"></i>
-                                    </a>
-                                    <br/>
-                                    <img id="\{$image[$i*5+2].imageId\}" class="img-thumbnail" src="\{$image[$i*5+2].path\}../image/glasses_icon.png" alt="">
-                                </div>
-                                <div class="col-md-2">
-                                    <a href="../controller/uiController.php?action=editIndexCover&imageId=\{$image[$i*5+3].imageId\}" class="btn btn-primary">
-                                        <i class="glyphicon glyphicon-pencil"></i>
-                                    </a>
-                                    <a class="btn btn-danger" onclick="deleteframe('\{$image[$i*5+3].imageId\}');">
-                                        <i class="glyphicon glyphicon-remove"></i>
-                                    </a>
-                                    <br/>
-                                    <img id="\{$image[$i*5+3].imageId\}" class="img-thumbnail" src="\{$image[$i*5+3].path\}../image/glasses_icon.png" alt="">
-                                </div>
-                                <div class="col-md-2">
-                                    <a href="../controller/uiController.php?action=editIndexCover&imageId=\{$image[$i*5+4].imageId\}" class="btn btn-primary">
-                                        <i class="glyphicon glyphicon-pencil"></i>
-                                    </a>
-                                    <a class="btn btn-danger" onclick="deleteframe('\{$image[$i*5+4].imageId\}');">
-                                        <i class="glyphicon glyphicon-remove"></i>
-                                    </a>
-                                    <br/>
-                                    <img id="\{$image[$i*5+4].imageId\}" class="img-thumbnail" src="\{$image[$i*5+4].path\}../image/glasses_icon.png" alt="">
-                                </div>
-                                \{/for\}
-                            </div>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -100,6 +125,58 @@
         </div>
         \{include file="../common/footer.html"\}
     </div>
+    <script type="text/javascript" src="../plugins/bootstrap-filestyle/src/bootstrap-filestyle.min.js"> </script>
+    <script>
+        var newImg = [];
+        $(document).ready(function () {
+
+            $(".uploadImage").filestyle({
+                size: "nr",
+                input: false,
+                buttonText: "上傳圖片",
+                buttonName: "btn-info",
+                iconName: "glyphicon glyphicon-camera"
+            });
+
+            $(".uploadImage").change(function () {
+                readURL(this);
+            });
+
+        });
+
+        function readURL(input) {
+            id = '#' + input.id + '_img';
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    $(id).attr('src', e.target.result);
+                    $(id).css('display', '');
+                }
+                reader.readAsDataURL(input.files[0]);
+                newImg.push(input.name);
+            }
+        }
+
+        function deleteImg(imageId) {
+            BootstrapDialog.show({
+                title: '提醒',
+                message: '確定刪除該風格圖片嗎?',
+                buttons: [{
+                    label: '確定',
+                    cssClass: 'btn-danger',
+                    action: function () {
+                        location = '../controller/styleController.php?action=styleImageDelete&imageId=' + imageId;
+                    }
+                }, {
+                    label: '取消',
+                    action: function (dialogItself) {
+                        dialogItself.close();
+                    }
+                }]
+            });
+        }
+    </script>
 </body>
 
 </html>
