--- a/web/view/user/userShoppingRecordEdit.html
+++ b/web/view/user/userShoppingRecordEdit.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -9,23 +8,25 @@
 
 <script>
 
-$(document).ready(function() {
+    $(document).ready(function () {
 
-    var frameData = \{$frameData|json_encode\};
-    var glassData = \{$glassData|json_encode\};
-    var lenData = \{$lenData|json_encode\};
-    var partData = \{$partData|json_encode\};
-    var allItemData = {'frame': frameData,
-                    'glass': glassData,
-                    'len': lenData,
-                    'part': partData};
-    var allTranDetailData = \{$allTranDetailData|json_encode\};
-    var tranData = \{$tranData|json_encode\};
+        var frameData = \{ $frameData| json_encode\ };
+        var glassData = \{ $glassData| json_encode\ };
+        var lenData = \{ $lenData| json_encode\ };
+        var partData = \{ $partData| json_encode\ };
+        var allItemData = {
+            'frame': frameData,
+            'glass': glassData,
+            'len': lenData,
+            'part': partData
+        };
+        var allTranDetailData = \{ $allTranDetailData| json_encode\ };
+        var tranData = \{ $tranData| json_encode\ };
 
-    var num = 0;
-    var hidden = "hidden";
-    $(document).on('click', '.shoppingRecordBtn',function(){
-            if(num != 0)
+        var num = 0;
+        var hidden = "hidden";
+        $(document).on('click', '.shoppingRecordBtn', function () {
+            if (num != 0)
                 hidden = "";
 
             $(`#box${num}`).html(`
@@ -70,67 +71,68 @@ $(document).ready(function() {
 
             $(`#itemType_${num}`).selectpicker('refresh');
             $(`#itemName_${num}`).selectpicker('refresh');
-            $(`#box${num}`).after(`<div id="box${num+1}" class="box box-primary hidden">`);
+            $(`#box${num}`).after(`<div id="box${num + 1}" class="box box-primary hidden">`);
             num++;
 
             $('input[name=tranDetailLength]').val(num);
-    });
+        });
 
-    // delete button event
-    $(document).on('click', '.deleteShoppingRecordBtn',function(){
-        var toBeDeleteBoxNum = $(this).attr('id').split('_')[1];
+        // delete button event
+        $(document).on('click', '.deleteShoppingRecordBtn', function () {
+            var toBeDeleteBoxNum = $(this).attr('id').split('_')[1];
 
-        console.log($(`#state_${toBeDeleteBoxNum}`).val());
-        if($(`#state_${toBeDeleteBoxNum}`).val() === 'insert'){
-            console.log('YO');
-            $(`#box${toBeDeleteBoxNum}`).remove();
+            console.log($(`#state_${toBeDeleteBoxNum}`).val());
+            if ($(`#state_${toBeDeleteBoxNum}`).val() === 'insert') {
+                console.log('YO');
+                $(`#box${toBeDeleteBoxNum}`).remove();
+            }
+
+            if ($(`#state_${toBeDeleteBoxNum}`).val() === 'update') {
+                $(`#box${toBeDeleteBoxNum}`).addClass('hidden');
+                $(`#state_${toBeDeleteBoxNum}`).val('delete');
+            }
+        });
+
+
+
+
+        // get itemName when itemType was selecting(changing)
+        $(document).on('change', 'select[id^=itemType]', function () {
+            var selectedItemNameNum = $(this).attr('id').split('_')[1];
+            var selectedType = $(this).val();
+            var correspondingItems = [];
+            var optionsHtml = "";
+            for (var i = 0; i < allItemData[selectedType].length; i++) {
+                optionsHtml += `<option value=${allItemData[selectedType][i][`${selectedType}Id`]}>${allItemData[selectedType][i][`${selectedType}Name`]}</option>`;
+            }
+            $(`select[id=itemName_${selectedItemNameNum}]`).html(optionsHtml);
+            $(`select[id=itemName_${selectedItemNameNum}]`).selectpicker('refresh');
+        });
+
+        //  produce tranDetail in database
+        var itemType = "";
+        for (i in allTranDetailData) {
+            $(`#shoppingRecordBtn_0`).click();
+            itemType = allTranDetailData[i]['itemId'].split('_')[0];
+            $(`select[id=itemType_${i}]`).val(itemType).change(); //  change trigger when itemName is selected and itemType changed at the same Time
+            $(`select[id=itemName_${i}]`).val(allTranDetailData[i]['itemId']);
+            $(`#state_${i}`).val('update');
+            $(`#amount_${i}`).val(allTranDetailData[i]['itemNum']);
+
+
+            $(`select[id=itemType_${i}]`).selectpicker('refresh');
+            $(`select[id=itemName_${i}]`).selectpicker('refresh');
         }
 
-        if($(`#state_${toBeDeleteBoxNum}`).val() === 'update'){
-            $(`#box${toBeDeleteBoxNum}`).addClass('hidden');
-            $(`#state_${toBeDeleteBoxNum}`).val('delete');
-        }
+        $(`textarea[name=description]`).val(tranData['description']);
+        $('#price').val(tranData['price']);
+        $(`textarea[name=opinion]`).val(tranData['opinion']);
+        $('#score').val(tranData['score']);
+
+        $(`input.form-check-input[value=${tranData['checkState']}]`).attr('checked', 'true');
     });
-
-
-
-
-    // get itemName when itemType was selecting(changing)
-    $(document).on('change', 'select[id^=itemType]',function(){
-        var selectedItemNameNum = $(this).attr('id').split('_')[1];
-        var selectedType = $(this).val();
-        var correspondingItems = [];
-        var optionsHtml = "";
-        for(var i = 0 ; i < allItemData[selectedType].length ; i++){
-            optionsHtml += `<option value=${allItemData[selectedType][i][`${selectedType}Id`]}>${allItemData[selectedType][i][`${selectedType}Name`]}</option>`;
-        }
-        $(`select[id=itemName_${selectedItemNameNum}]`).html(optionsHtml);
-        $(`select[id=itemName_${selectedItemNameNum}]`).selectpicker('refresh');
-    });
-
-    //  produce tranDetail in database
-    var itemType = "";
-    for(i in allTranDetailData){
-        $(`#shoppingRecordBtn_0`).click();
-        itemType = allTranDetailData[i]['itemId'].split('_')[0];
-        $(`select[id=itemType_${i}]`).val(itemType).change(); //  change trigger when itemName is selected and itemType changed at the same Time
-        $(`select[id=itemName_${i}]`).val(allTranDetailData[i]['itemId']);
-        $(`#state_${i}`).val('update');
-        $(`#amount_${i}`).val(allTranDetailData[i]['itemNum']);
-
-
-        $(`select[id=itemType_${i}]`).selectpicker('refresh');
-        $(`select[id=itemName_${i}]`).selectpicker('refresh');
-    }
-    
-    $(`textarea[name=description]`).val(tranData['description']);
-    $('#price').val(tranData['price']);
-    $(`textarea[name=opinion]`).val(tranData['opinion']);
-    $('#score').val(tranData['score']);
-
-    $(`input.form-check-input[value=${tranData['checkState']}]`).attr('checked', 'true');
-});
 </script>
+
 <body class="hold-transition skin-yellow sidebar-mini">
     <div class="wrapper">
         \{include file="../common/header.html"\} \{include file="../common/menu.html"\}
@@ -154,52 +156,51 @@ $(document).ready(function() {
                         \{/if\}
 
 
-                        <form class="form-horizontal" method="post"  action="../controller/userController.php" >
+                        <form class="form-horizontal" method="post" action="../controller/userController.php">
 
                             <!--checkState box-->
                             <div id="checkStateBox" class="box box-primary">
                                 <div class="box-body">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="checkState" value="1" checked>
-                                            <label class="form-check-label" for="exampleRadios1">
-                                                非金錢往來行為
-                                            </label>
-                                        </div>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="checkState" value="2">
-                                            <label class="form-check-label" for="exampleRadios2">
-                                                未付款
-                                            </label>
-                                        </div>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="checkState" value="3">
-                                            <label class="form-check-label" for="exampleRadios3">
-                                                以付訂金
-                                            </label>
-                                        </div>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="checkState" value="4">
-                                            <label class="form-check-label" for="exampleRadios3">
-                                                已結清
-                                            </label>
-                                        </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="checkState" value="1" checked>
+                                        <label class="form-check-label" for="exampleRadios1">
+                                            非金錢往來行為
+                                        </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="checkState" value="2">
+                                        <label class="form-check-label" for="exampleRadios2">
+                                            未付款
+                                        </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="checkState" value="3">
+                                        <label class="form-check-label" for="exampleRadios3">
+                                            以付訂金
+                                        </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="checkState" value="4">
+                                        <label class="form-check-label" for="exampleRadios3">
+                                            已結清
+                                        </label>
+                                    </div>
                                 </div>
                             </div>
 
                             <div id="box0" class="box box-primary hidden">
                                 <div class="box-footer" style="text-align: right;">
-                                    <a id= "shoppingRecordBtn_0" class="shoppingRecordBtn btn btn-sm btn-primary"><i class="glyphicon glyphicon-plus"></i></a>
+                                    <a id="shoppingRecordBtn_0" class="shoppingRecordBtn btn btn-sm btn-primary">
+                                        <i class="glyphicon glyphicon-plus"></i>
+                                    </a>
                                 </div>
-                            </div
-
-
-                            <!--description & price box-->
+                            </div <!--description & price box-->
                             <div id="priceBox" class="box box-primary">
                                 <div class="box-body">
                                     <div id="descriptionDiv" class="form-group">
                                         <label for="description" class="col-sm-2 control-label">備註</label>
                                         <div class="col-sm-8">
-                                            <textarea name="description" class="form-control" rows="5" ></textarea>
+                                            <textarea name="description" class="form-control" rows="5"></textarea>
                                         </div>
                                     </div>
                                     <div id="pirceDiv" class="form-group">
@@ -211,7 +212,7 @@ $(document).ready(function() {
                                 </div>
 
                                 <div class="box-footer" style="text-align: right;">
-                                    <a href="../controller/userController.php?action=userShoppingRecordPrepare&userId=\{$userId\}" class="btn btn-warning">取消</a>
+                                    <a href="../controller/userController.php?action=userShoppingRecordPrepare&userId=\{$tranData.userId\}" class="btn btn-warning">取消</a>
                                     <input type="hidden" name="action" value="userShoppingRecordEdit">
                                     <input type="hidden" name="userId" value="\{$tranData.userId\}">
                                     <input type="hidden" name="tranId" value="\{$tranData.tranId\}">
