Modify pointEdit layout for input type

--- a/web/view/point/pointEdit.html
+++ b/web/view/point/pointEdit.html
@@ -34,10 +34,10 @@
                                     </div>
                                     <div id="pointNewRateDiv" class="form-group">
                                         <label class="col-sm-2 control-label">修改匯率</label>
-                                        <div class="col-sm-1">
-                                            <input id="pointNewRate" name="pointNewRate" class="col-sm-1 form-control" style="width: 60px;">
+                                        <div class="col-sm-2">
+                                            <input id="pointNewRate" name="pointNewRate" class="col-sm-1 form-control" type="number" min="0" style="width: 100px;">
                                         </div>
-                                        <label class="col-sm-9 control-label" style="text-align: left;">元 1 點</label>
+                                        <label class="col-sm-8 control-label" style="text-align: left;">元 1 點</label>
                                     </div>
                                 </div>
                                 <!-- /.box-body -->
