Fix user birthday function

--- a/web/view/user/userAdd.html
+++ b/web/view/user/userAdd.html
@@ -84,7 +84,7 @@
                                                 <div class="input-group-addon">
                                                     <i class="fa fa-clock-o"></i>
                                                 </div>
-                                                <input type="text" class="form-control pull-right" id="birthdayPicker">
+                                                <input type="text" name="birthday" class="form-control pull-right" id="birthdayPicker">
                                             </div>
                                         </div>
                                     </div>
