user: Fix userAdd page button disabled error

--- a/web/view/user/userAdd.html
+++ b/web/view/user/userAdd.html
@@ -27,6 +27,7 @@
 
             $("#account").focusin(function () {
                 $("#repeatedAccountValidataion").addClass("hidden");
+                $("button[type=submit]").attr('disabled', false);
             });
 
             $('#birthdayPicker').datepicker({
